<package>
  <name>dmp</name>
  <version>1.0.0</version>
  <description>
    Catkinized DMP package
  </description>
  <maintainer email="todo@todo.edu">Scott Niekum</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/dmp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
</package>


